[package]
name = "interpolate"
version = "0.1.2"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]

description = "A simple form of string interpolation"
documentation = "http://docs.rs/interpolate"
repository = "https://github.com/anowell/interpolate"
readme = "README.md"

[lib]
crate-type = ["proc-macro"]

[dependencies]
proc-macro2 = "0.4.9"
quote = "0.6.4"
unicode-xid = "0.1.0"
