[package]
name = "interpolate"
version = "0.2.3"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]

description = "A simple form of string interpolation"
documentation = "http://docs.rs/interpolate"
repository = "https://github.com/anowell/interpolate"
readme = "README.md"

[lib]
crate-type = ["proc-macro"]

[dependencies]
